# backend_OrcamentoFacil

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 32b5bbad1864_initial.py  5757e551a7ea_goals_table.py  9a1c7e4b2f08_revoked_tokens_table.py  c6b3b95d3fde_accounts_table.py  cfc7ddc4894e_indices_derivados_de_queries_reais_s24_.py  dc9cd9fa5bc4_transactions_table.py  e35206e235a4_budgets_table.py  f2dccfa7b0f4_users_table.py  f94ba1b49295_categories_table.py
backend/app/: __init__.py  main.py
backend/app/accounts/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/auth/: deps.py  jwt.py  models.py  revoked.py  router.py  security.py
backend/app/budgets/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/categories/: models.py  (+5 more)
backend/tests/: conftest.py  test_accounts_model.py  test_accounts_router.py  test_accounts_schemas.py  test_accounts_service.py  test_auth_jwt.py  test_auth_login.py  test_auth_logout.py  test_auth_refresh.py  test_auth_register.py  test_auth_security.py  test_balance_regression.py  test_budgets_model.py  test_budgets_router.py  test_budgets_service.py  test_cache_headers.py  test_categories_model.py  test_categories_router.py  test_categories_seed.py  test_config.py  test_cors.py  test_dashboard.py  test_database.py  test_db_indices.py  test_error_messages.py  test_errors.py  test_goals_model.py  test_goals_router.py  test_health.py  test_healthz.py  test_imports_parser.py  test_imports_router.py  test_logging_shipping.py  test_metrics.py  test_pagination.py  test_ratelimit.py  test_ratelimit_user.py  test_schema_base.py  test_security_headers.py  test_smoke.py  (+8 more)
(+60 files in other folders)
