[project]
name = "orcafacil-backend"
version = "0.0.0"
description = "OrçaFácil — backend FastAPI"
requires-python = ">=3.12"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    ".venv",
    "venv",
    "alembic/versions",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line length é tratada pelo black
    "B008",  # Depends/Query/etc no default é o padrão idiomático do FastAPI
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]

# pytest config vive em pytest.ini (S00-T04).

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "tests/*",
    ".venv/*",
    "alembic/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1

